--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>학번 이름</title>
+        <title>2312607 송유진</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="container mt-3 ">
-            <h1>index.html (학과 학번 이름)</h1>
+            <h1>index.html (컴퓨터과학전공 2312607 송유진)</h1>
             <hr>
             <ul class="nav flex-column">
                 <li class="pb-3"><a href="main.html">실습 과제 1_HTML</a> <span class="badge bg-primary">제출완료</span></li>
