modified:   index.html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     </head>
     <body>
         <div class="container mt-3 ">
-            <h1>index.html (컴퓨터과학전공 2312607 송유진)</h1>
+            <h1>컴퓨터과학전공 2312607 송유진</h1>
             <hr>
             <ul class="nav flex-column">
-                <li class="pb-3"><a href="main.html">실습 과제 1_HTML</a> <span class="badge bg-primary">제출완료</span></li>
+                <li class="pb-3"><a href="main.html">메인 페이지</a> <span class="badge bg-primary">제출완료</span></li>
                 <li class="pb-3"><a href="lab2-2.html">실습 과제 2_CSS</a> <span class="badge bg-primary">제출완료</span></li>
                 <li class="pb-3"><a href="lab03.html">실습 과제 3_Layout</a> <span class="badge bg-primary">제출완료</span></li>
                 <li class="pb-3"><a href="#">실습 과제 4_JavaScript 1</a> <span class="badge bg-danger">제출예정</span></li>
