--- a/기말 프로젝트/index.html
+++ b/기말 프로젝트/index.html
@@ -23,6 +23,8 @@
                 <li class="pb-3"><a href="main.html">메인 페이지</a> <span class="badge bg-danger">제출예정</span></li>
                 <li class="pb-3"><a href="musical.html">뮤지컬 페이지</a> <span class="badge bg-danger">제출예정</span></li>
                 <li class="pb-3"><a href="review.html">관람 후기 작성 페이지</a> <span class="badge bg-danger">제출예정</span></li>
+                <li class="pb-3"><a href="review_complete.html">관람 후기 작성 완료 페이지</a> <span class="badge bg-danger">제출예정</span></li>
+                <li class="pb-3"><a href="buy_complete.html">구매 완료 페이지</a> <span class="badge bg-danger">제출예정</span></li>
             </ul>
         </div>
     </body>
