modified:   "\352\270\260\353\247\220 \355\224\204\353\241\234\354\240\235\355\212\270/index.html"

--- a/기말 프로젝트/index.html
+++ b/기말 프로젝트/index.html
@@ -20,11 +20,11 @@
             <h2>진행 상황</h2>
             <hr>
             <ul class="nav flex-column">
-                <li class="pb-3"><a href="main.html">메인 페이지</a> <span class="badge bg-danger">제출예정</span></li>
-                <li class="pb-3"><a href="musical.html">뮤지컬 페이지</a> <span class="badge bg-danger">제출예정</span></li>
-                <li class="pb-3"><a href="review.html">관람 후기 작성 페이지</a> <span class="badge bg-danger">제출예정</span></li>
-                <li class="pb-3"><a href="review_complete.html">관람 후기 작성 완료 페이지</a> <span class="badge bg-danger">제출예정</span></li>
-                <li class="pb-3"><a href="buy_complete.html">구매 완료 페이지</a> <span class="badge bg-danger">제출예정</span></li>
+                <li class="pb-3"><a href="main.html">메인 페이지</a> <span class="badge bg-danger">미완성</span></li>
+                <li class="pb-3"><a href="musical.html">뮤지컬 페이지</a> <span class="badge bg-danger">미완성</span></li>
+                <li class="pb-3"><a href="review.html">관람 후기 작성 페이지</a> <span class="badge bg-danger">미완성</span></li>
+                <li class="pb-3"><a href="review_complete.html">관람 후기 작성 완료 페이지</a> <span class="badge bg-danger">미완성</span></li>
+                <li class="pb-3"><a href="buy_complete.html">구매 완료 페이지</a> <span class="badge bg-danger">미완성</span></li>
             </ul>
         </div>
     </body>
